--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "bot.js",
+      "src": "maker.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "created.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/created(.*)",
+      "dest": "created.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "bot.js"
+      "dest": "maker.js"
     }
   ]
 }
